--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="section">
-        <h1>Officialy Benjamin Wilmet, but call me Benji no worries!</h1>
+        <h1>Officialy Benjamin Wilmet, but call me Benji, hey no worries!</h1>
         <nav>
             <ul>
                 <li><a href="#content">Who.is</a></li>
